# programming-courses

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci-pipeline.yml
app/: crud.py  db.py  dto.py  main.py  models.py
kubernetes/: configmap.yaml  db-service.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml  statefulset.yaml
