[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["prendjov <prendjov.p@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
